# aec-rag-system

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INDEX.md  LICENSE  PROJECT_JOURNAL.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PINNING_GUIDE.md  REPOSITORY_TOPICS.md
.github/workflows/: ci.yml
src/: __init__.py
src/api/: __init__.py  main.py
src/core/: __init__.py  embeddings.py  graphrag.py  llm.py
src/ingestion/: __init__.py  cad_parser.py  pdf_parser.py
src/schema/: __init__.py  aec_schema.py
